<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/wifiactivity_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/skyblue"
        android:gravity="center"
        android:text="@string/smartlink"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/wifiactivity_textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifiactivity_textview"
        android:background="@color/skyblue"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TableLayout
        android:id="@+id/TableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifiactivity_textview2" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hiflying_smartlinker_ssid"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_hiflying_smartlinker_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@color/skyblue"
                android:editable="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/smartlinker_password"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/smartlinker_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="22dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:hint="@string/wifi_password" 
                android:singleLine="true"/>

            <TableLayout
                android:id="@+id/TableLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/smartlinker_password" >
            </TableLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button_hiflying_smartlinker_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/wifibutton"
        android:gravity="center" />

</RelativeLayout>