<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_background"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arcmenu"
        android:layout_above="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp" />

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:background="@drawable/yuanjiao"
        android:layout_marginBottom="100dp"
        android:layout_above="@+id/login"
        android:layout_centerHorizontal="true">

        <FrameLayout
            android:id="@+id/username_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/bt_username_clear"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/x"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                />

            <EditText
                android:id="@+id/password"

                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="55dp"
                android:paddingRight="60dp"
                android:hint="用户密码"
                android:layout_gravity="center_horizontal|bottom">

            </EditText>

            <ImageView
                android:layout_width="33dp"
                android:layout_height="34dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginStart="7dp"
                android:background="@drawable/password" />

            <Button
                android:id="@+id/bt_pwd_eye"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/eye"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                />

            <Button
                android:id="@+id/bt_pwd_clear"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/x"
                android:visibility="invisible"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="33dp"
                />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/usercode_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="6dp"
            android:gravity="center" >


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:layout_marginBottom="10px"
            android:layout_below="@id/usercode_layout"
            android:id="@+id/remember"
            android:orientation="horizontal"
            android:weightSum="1">
            <CheckBox
                android:id="@+id/checkpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码" />
            <ImageView
                android:layout_width="150dp"
                android:background="@color/red"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="自动登录"
                android:checked="false"
                />
        </LinearLayout>



        <EditText
            android:id="@+id/user_info"
            android:layout_width="fill_parent"
            android:layout_height="49dp"
            android:layout_marginTop="22dp"
            android:inputType="number"
            android:maxLength="20"
            android:paddingLeft="55dp"
            android:paddingRight="60dp"
            android:hint="用户账号"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

        </EditText>

        <ImageView
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginStart="7dp"
            android:background="@drawable/user"
            android:visibility="visible"
            android:layout_alignTop="@+id/user_info"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#f0336699"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:layout_above="@+id/register"
        android:layout_alignStart="@+id/registfer"
        android:layout_alignEnd="@+id/registfer" />
    <RelativeLayout
        android:id="@+id/remember_layout000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

    </RelativeLayout>

    <TextView
        android:id="@+id/registfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="#00000000"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/button_title"
        android:textSize="18sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:gravity="left|center_vertical"
        android:text="@string/regedit"
        android:textSize="16sp"
        android:visibility="visible"
        android:layout_alignBaseline="@+id/login_error"
        android:layout_alignBottom="@+id/login_error"
        android:layout_alignStart="@+id/login_layout" />

    <Button
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/unremenber"
        android:textSize="16sp"
        android:layout_above="@+id/registfer"
        android:layout_alignEnd="@+id/login_layout" />
    <TextView
        android:id="@+id/auto"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="自动登录中"
        />

</RelativeLayout>